force-app/main/default/objects/CEPARC__Archiva_Configuration__c/CEPARC__Archiva_Configuration__c.object-meta.xml
<CustomObject>
    <description>This object is used by DataArchiva for storing necessary data required by the application.</description>
    <label>DataArchiva Config</label>
    <nameField>
        <displayFormat>AC-{0000}</displayFormat>
        <label>Sl No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DataArchiva Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>