force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Archive_Field_History__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Archive_Field_History__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, user will be able to archive field history records for the corresponding object.</description>
    <inlineHelpText>If checked, user will be able to archive field history records for the corresponding object.</inlineHelpText>
    <label>Archive Field History?</label>
    <type>Checkbox</type>
</CustomField>