force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Day__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Day__c</fullName>
    <description>Scheduled Day (date).</description>
    <inlineHelpText>Scheduled Day (date).</inlineHelpText>
    <label>Day</label>
    <length>100</length>
    <type>Text</type>
</CustomField>