force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Deleted_Field_Mapping__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Deleted_Field_Mapping__c</fullName>
    <description>Stores mapping of deleted fields.</description>
    <inlineHelpText>Stores mapping of deleted fields.</inlineHelpText>
    <label>Deleted Field Mapping</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>