force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Filter__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Filter__c</fullName>
    <description>Stores the record filter conditions.</description>
    <inlineHelpText>Stores the record filter conditions.</inlineHelpText>
    <label>Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>