force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Number_1__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Number_1__c</fullName>
    <label>Number 1</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>