force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Object_Label__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Object_Label__c</fullName>
    <description>Archived and Big object&apos;s label.</description>
    <inlineHelpText>Archived and Big object&apos;s label.</inlineHelpText>
    <label>Object Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>