force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Object_Name__c</fullName>
    <description>Archived object Name.</description>
    <inlineHelpText>Archived object Name.</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>