force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Preferred_Start_time__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Preferred_Start_time__c</fullName>
    <description>Preferred scheduler start time.</description>
    <inlineHelpText>Preferred scheduler start time.</inlineHelpText>
    <label>Preferred Start time</label>
    <length>100</length>
    <type>Text</type>
</CustomField>