force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Schedule_Type__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Schedule_Type__c</fullName>
    <label>Schedule Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Hourly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>