force-app/main/default/objects/CEPARC__Archiva_Configuration__c/fields/CEPARC__Type__c.field-meta.xml
<CustomField>
    <fullName>CEPARC__Type__c</fullName>
    <description>Archiva configuration type</description>
    <inlineHelpText>Archiva configuration type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FAT</fullName>
            </value>
            <value>
                <fullName>DCV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>